@@ -37,6 +37,13 @@ audit.exe
 	reviewed - e.g. reviewer name and some useful notes for future
 	reviewers
 
+ivt-check.exe
+
+	Check the specified assembly for its use of [InternalsVisibleTo]
+	and report any assembly that is not platform code. This makes it
+	possible to ensure our platform assemblies are not opening 
+	themselves to external code.
+
 Note: the tools are not meant to be installed on the end-users system.
 They are only needed at build-time.
 
